# kookaburra

./: .gitignore  CMakeLists.txt  README.md  Test1  victor.txt
Basisopbouw/mainproject/: CMakeLists.txt
Drivers/Barometer/barometer/: CMakeLists.txt  MS5611.cpp  main.cpp  usart.cpp
Drivers/Barometer/barometer/CLionBuildOutput/Debug/: barometer.elf
Drivers/Barometer/barometer/h/: MS5611.h
Drivers/Pwm/pwm/: .gitignore  CMakeLists.txt  PWM.cpp  main.cpp  pwm.cpp  stm32f0xx_it.c  usart.cpp
Drivers/Pwm/pwm/CLionBuildOutput/Debug/: pwm.elf
Drivers/Pwm/pwm/h/: main.h  pwm.h
Final/mainproject/: CMakeLists.txt  MS5611.cpp  Release_Notes.html  airplane.cpp  counter.cpp  flash.cpp  flash.h  main.cpp  mpu6050.cpp  pwm.cpp  readme.txt  rgbdriver.cpp  stm32f0xx_it.c  stm32f0xx_it.cpp  usart.cpp
FlightPlanner/: FlightPlanner.pro  UART.cpp  UART.h  datadump.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mywindow.h  secondwindow.h  secondwindow.ui  sendcompleted.cpp  sendcompleted.h  sendcompleted.ui  serial.cpp  serial.h
FlightPlanner/src/: FlightPlanner.pro  FlightPlanner.pro.user.5d72906  UART.cpp  UART.h  datadump.cpp  flightplanner.rc  mainwindow.cpp  mainwindow.h  mainwindow.ui  secondwindow.ui  sendcompleted.cpp  sendcompleted.h  sendcompleted.ui  serial.cpp  serial.h
Fuzzy/: CMakeLists.txt  fuzzy.cpp  fuzzy.h  main.cpp
GUI/: FlightPlanner.pro  README.MD  UART.cpp  UART.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mywindow.cpp  mywindow.ui  secondwindow.ui
GUI/Debug/: Makefile.Debug  Makefile.Release  ui_mainwindow.h  ui_mywindow.h  ui_secondwindow.h
GUI/src/: FlightPlanner.pro  FlightPlanner.pro.user.5d72906  UART.cpp  UART.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mywindow.cpp  mywindow.h  mywindow.ui  secondwindow.ui
Hello World/: CMakeLists.txt  main.cpp
PCB/Kookaburra_pcb/: Kookaburra_pcb.PrjPcb  LM2936.SchLib  Sheet2.SchDoc  TLV62130.SchLib  TPS564208DDCT.SchLib  sheet1.SchDoc  usb.SchLib
STM32CLion/STM32P405LedsDemo/: CMakeLists.txt  leds.cpp  syscalls.c
STM32CLion/STM32P405LedsDemo/Keil/: F4LEDDemo.uvopt
STM32CLion/STM32P405LedsDemo/gdbscript/: stm32f405debug
STM32CLion/STM32P405LedsDemo/h/: leds.h
STM32CLion/buildsystem/: BasisSTM32.cmake  STM32Development.cmake  STM32F0.cmake  STM32F1.cmake  STM32F30.cmake  STM32F4.cmake
STM32CLion/discoveryf0demo/: stm32f0xx_it.c
STM32CLion/discoveryf4Demo/: CMakeLists.txt  leds.cpp  main.cpp  stm32f4xx_it.c  syscalls.c  term_io.c
STM32CLion/discoveryf4Demo/CLionBuildOutput/Debug/: stm32f4discoverdemo.elf
STM32CLion/discoveryf4Demo/h/: comm.h  leds.h  stm32f4xx_conf.h  stm32f4xx_it.h
STM32CLion/discoveryf4Demo/tools/: dezetagme.py  maccheckin.py  svncheckin.py
STM32CLion/discoveryf4LedsDemo/: CMakeLists.txt  leds.cpp  main.cpp
STM32CLion/discoveryf4LedsDemo/Keil/: F4LEDDemo.uvproj
STM32CLion/discoveryf4LedsDemo/h/: leds.h
STM32CLion/f1demo/: CMakeLists.txt  JLinkDebugger.jdebug  comm.c  main.cpp  mini_cpp.cpp  myclasses.cpp  myclasses.h  platform_config.h  stm32f10x_conf.h  stm32f10x_it.c  stm32f10x_it.h  syscalls.c  timebase.c  timebase.h
STM32CLion/f3demo/: CMakeLists.txt  comm.c  leds.cpp  main.cpp  stm32f4xx_it.c  syscalls.c
STM32CLion/f3demo/h/: leds.h  main.h  stm32f30x_conf.h  term_io.h
STM32CLion/gemeenschappelijk/Libraries/STM32F4xx_StdPeriph_Driver/: CMakeLists.txt  Release_Notes.html
STM32CLion/gemeenschappelijk/Libraries/STM32F4xx_StdPeriph_Driver/inc/: misc.h  stm32f4xx_adc.h  stm32f4xx_can.h  stm32f4xx_crc.h  stm32f4xx_cryp.h  stm32f4xx_dac.h  stm32f4xx_dbgmcu.h  stm32f4xx_dcmi.h  stm32f4xx_dma.h  stm32f4xx_exti.h  stm32f4xx_flash.h  stm32f4xx_fsmc.h  stm32f4xx_gpio.h  stm32f4xx_hash.h  stm32f4xx_i2c.h  stm32f4xx_iwdg.h  stm32f4xx_pwr.h  stm32f4xx_rcc.h  stm32f4xx_rng.h  stm32f4xx_rtc.h  stm32f4xx_sdio.h  stm32f4xx_spi.h  stm32f4xx_syscfg.h  stm32f4xx_tim.h  stm32f4xx_usart.h  stm32f4xx_wwdg.h
STM32CLion/gemeenschappelijk/Libraries/STM32F4xx_StdPeriph_Driver/src/: misc.c  stm32f4xx_adc.c  stm32f4xx_can.c  stm32f4xx_crc.c  stm32f4xx_cryp.c  stm32f4xx_cryp_aes.c  stm32f4xx_cryp_des.c  stm32f4xx_cryp_tdes.c  stm32f4xx_dac.c  stm32f4xx_dbgmcu.c  stm32f4xx_dcmi.c  stm32f4xx_dma.c  stm32f4xx_exti.c  stm32f4xx_flash.c  stm32f4xx_fsmc.c  stm32f4xx_gpio.c  stm32f4xx_hash.c  stm32f4xx_hash_md5.c  stm32f4xx_hash_sha1.c  stm32f4xx_i2c.c  stm32f4xx_iwdg.c  stm32f4xx_pwr.c  stm32f4xx_rcc.c  stm32f4xx_rng.c  stm32f4xx_rtc.c  stm32f4xx_sdio.c  stm32f4xx_spi.c  stm32f4xx_syscfg.c  stm32f4xx_tim.c  stm32f4xx_usart.c  stm32f4xx_wwdg.c
STM32CLion/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/: CMakeLists.txt  Release_Notes.html
STM32CLion/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/: usb_conf_template.h  usb_core.h  usb_hcd.h  usb_hcd_int.h  usb_otg.h  usb_regs.h
STM32CLion/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/src/: usb_bsp_template.ctempl  usb_core.c  usb_dcd_int.c  usb_hcd.c  usb_hcd_int.c  usb_otg.c
STM32CLion/mainproject/: .gitignore  CMakeLists.txt  Release_Notes.html  main.cpp  stm32f0xx_it.c  system_stm32f0xx.c
STM32F0_Keil+GCCDemo/Keil/: KeilGCCDemo.uvoptx
STM32F0_Keil+GCCDemo/gcc/: STM32F0x_64k_8k_flash.ld
STM32P405LedsDemo/: leds.cpp
STM32P405LedsDemo/Keil/: F4LEDDemo.uvgui.bkse
STM32P405LedsDemo/h/: leds.h
Simulations/: Altitude_control.slx  Pitch_control.slx
Tests/Pitch_Control_example/gemeenschappelijk/Libraries/STM32_USB_Device_Library/: CMakeLists.txt
build-FlightPlanner-Desktop_Qt_5_5_1_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.FlightPlanner.Debug  object_script.FlightPlanner.Release  ui_mainwindow.h  ui_mywindow.h  ui_secondwindow.h  ui_sendcompleted.h
build-FlightPlanner-Desktop_Qt_5_5_1_MinGW_32bit-Debug/debug/: moc_UART.cpp  moc_mainwindow.cpp  moc_mywindow.cpp  moc_secondwindow.cpp  moc_sendcompleted.cpp  (+1 more)
buildsystem/: BasisSTM32.cmake
discoveryf0demo/: main.cpp
discoveryf4Demo/: leds.cpp
f1demo/: CMakeLists.txt  myclasses.h  platform_config.h  syscalls.c  timebase.c  timebase.h
f3demo/: comm.c  leds.cpp
pseudocodes/: altitude_control.txt  pitch_control.txt
(+1426 files in other folders)
