cmake_minimum_required(VERSION 3.6)
project(kookaburra)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    Drivers/Accelerometer/accelerometer/h/comm.h
    Drivers/Accelerometer/accelerometer/h/main.h
    Drivers/Accelerometer/accelerometer/h/mpu6050.h
    Drivers/Accelerometer/accelerometer/h/stm32f0xx_conf.h
    Drivers/Accelerometer/accelerometer/h/stm32f0xx_it.h
    Drivers/Accelerometer/accelerometer/h/term_io.h
    Drivers/Accelerometer/accelerometer/main.cpp
    Drivers/Accelerometer/accelerometer/mpu6050.cpp
    Drivers/Accelerometer/accelerometer/stm32f0xx_it.c
    Drivers/Accelerometer/accelerometer/system_stm32f0xx.c
    Drivers/Accelerometer/gemeenschappelijk/basis/stm32f0/syscalls_cm0.c
    Drivers/Accelerometer/gemeenschappelijk/basis/comm.h
    Drivers/Accelerometer/gemeenschappelijk/basis/term_io.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/CM3/CoreSupport/core_cm3.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/CM3/CoreSupport/core_cm3.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/startup/gcc/startup_stm32f10x_md.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/stm32f10x.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/system_stm32f10x.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/system_stm32f10x.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F0xx/Include/stm32f0xx.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F0xx/Include/system_stm32f0xx.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F0xx/Source/Templates/system_stm32f0xx.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F30x/Include/stm32f30x.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F30x/Include/system_stm32f30x.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F30x/Source/Templates/system_stm32f30x.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F4xx/Include/system_stm32f4xx.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F4xx/Source/Templates/system_stm32f4xx.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/Include/arm_common_tables.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/Include/arm_math.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/Include/core_cm0.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/Include/core_cm0plus.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/Include/core_cm3.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/Include/core_cm4.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/Include/core_cm4_simd.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/Include/core_cmFunc.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/Include/core_cmInstr.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/Include/core_sc000.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/CMSIS/Include/core_sc300.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32f10x/cpal_i2c_hal_stm32f10x.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32f10x/cpal_i2c_hal_stm32f10x.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32f2xx/cpal_i2c_hal_stm32f2xx.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32f2xx/cpal_i2c_hal_stm32f2xx.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32f4xx/cpal_i2c_hal_stm32f4xx.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32f4xx/cpal_i2c_hal_stm32f4xx.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32l1xx/cpal_i2c_hal_stm32l1xx.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32l1xx/cpal_i2c_hal_stm32l1xx.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/inc/cpal.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/inc/cpal_conf_template.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/inc/cpal_i2c.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/src/cpal_hal.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/src/cpal_i2c.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_core.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_def.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_init.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_int.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_lib.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_mem.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_regs.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_sil.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_type.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/src/usb_core.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/src/usb_init.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/src/usb_int.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/src/usb_mem.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/src/usb_regs.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/src/usb_sil.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/audio/inc/usbd_audio_core.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/audio/inc/usbd_audio_out_if.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/audio/src/usbd_audio_core.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/audio/src/usbd_audio_out_if.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/cdc/inc/usbd_cdc_core.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/cdc/inc/usbd_cdc_if_template.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/cdc/src/usbd_cdc_core.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/inc/usbd_dfu_core.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/inc/usbd_dfu_mal.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/inc/usbd_flash_if.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/inc/usbd_mem_if_template.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/inc/usbd_otp_if.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/src/usbd_dfu_core.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/src/usbd_dfu_mal.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/src/usbd_flash_if.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/src/usbd_mem_if_template.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/src/usbd_otp_if.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/hid/inc/usbd_hid_core.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/hid/src/usbd_hid_core.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/inc/usbd_msc_bot.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/inc/usbd_msc_core.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/inc/usbd_msc_data.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/inc/usbd_msc_mem.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/inc/usbd_msc_scsi.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/src/usbd_msc_bot.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/src/usbd_msc_core.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/src/usbd_msc_data.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/src/usbd_msc_scsi.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/src/usbd_storage_template.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/inc/usbd_conf_template.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/inc/usbd_core.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/inc/usbd_def.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/inc/usbd_ioreq.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/inc/usbd_req.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/inc/usbd_usr.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/src/usbd_core.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/src/usbd_ioreq.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/src/usbd_req.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_bsp.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_conf_template.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_core.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_dcd.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_dcd_int.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_defines.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_hcd.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_hcd_int.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_otg.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_regs.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/src/usb_core.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/src/usb_dcd.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/src/usb_dcd_int.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/src/usb_hcd.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/src/usb_hcd_int.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/src/usb_otg.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_CPAL_Driver/inc/stm32f0xx_i2c_cpal.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_CPAL_Driver/inc/stm32f0xx_i2c_cpal_conf_template.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_CPAL_Driver/inc/stm32f0xx_i2c_cpal_hal.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_CPAL_Driver/src/stm32f0xx_i2c_cpal.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_CPAL_Driver/src/stm32f0xx_i2c_cpal_hal.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_adc.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_cec.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_comp.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_crc.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_dac.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_dbgmcu.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_dma.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_exti.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_flash.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_gpio.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_i2c.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_iwdg.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_misc.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_pwr.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_rcc.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_rtc.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_spi.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_syscfg.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_tim.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_usart.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_wwdg.h
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_adc.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_cec.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_comp.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_crc.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_dac.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_dbgmcu.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_dma.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_exti.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_flash.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_gpio.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_i2c.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_iwdg.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_misc.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_pwr.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_rcc.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_rtc.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_spi.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_syscfg.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_tim.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_usart.c
    Drivers/Accelerometer/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_wwdg.c
    Drivers/Accelerometer/gemeenschappelijk/STM32F0Discovery/stm32f0_discovery.c
    Drivers/Accelerometer/gemeenschappelijk/STM32F0Discovery/stm32f0_discovery.h
    Drivers/USART/gemeenschappelijk/basis/stm32f0/syscalls_cm0.c
    Drivers/USART/gemeenschappelijk/basis/comm.h
    Drivers/USART/gemeenschappelijk/basis/term_io.h
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/CM3/CoreSupport/core_cm3.c
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/CM3/CoreSupport/core_cm3.h
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/startup/gcc/startup_stm32f10x_md.c
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/stm32f10x.h
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/system_stm32f10x.c
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/system_stm32f10x.h
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F0xx/Include/stm32f0xx.h
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F0xx/Include/system_stm32f0xx.h
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F0xx/Source/Templates/system_stm32f0xx.c
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F30x/Include/stm32f30x.h
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F30x/Include/system_stm32f30x.h
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F30x/Source/Templates/system_stm32f30x.c
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F4xx/Include/system_stm32f4xx.h
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F4xx/Source/Templates/system_stm32f4xx.c
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/Include/arm_common_tables.h
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/Include/arm_math.h
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/Include/core_cm0.h
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/Include/core_cm0plus.h
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/Include/core_cm3.h
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/Include/core_cm4.h
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/Include/core_cm4_simd.h
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/Include/core_cmFunc.h
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/Include/core_cmInstr.h
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/Include/core_sc000.h
    Drivers/USART/gemeenschappelijk/Libraries/CMSIS/Include/core_sc300.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32f10x/cpal_i2c_hal_stm32f10x.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32f10x/cpal_i2c_hal_stm32f10x.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32f2xx/cpal_i2c_hal_stm32f2xx.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32f2xx/cpal_i2c_hal_stm32f2xx.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32f4xx/cpal_i2c_hal_stm32f4xx.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32f4xx/cpal_i2c_hal_stm32f4xx.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32l1xx/cpal_i2c_hal_stm32l1xx.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32l1xx/cpal_i2c_hal_stm32l1xx.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/inc/cpal.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/inc/cpal_conf_template.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/inc/cpal_i2c.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/src/cpal_hal.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/src/cpal_i2c.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_core.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_def.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_init.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_int.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_lib.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_mem.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_regs.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_sil.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_type.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/src/usb_core.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/src/usb_init.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/src/usb_int.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/src/usb_mem.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/src/usb_regs.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/src/usb_sil.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/audio/inc/usbd_audio_core.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/audio/inc/usbd_audio_out_if.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/audio/src/usbd_audio_core.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/audio/src/usbd_audio_out_if.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/cdc/inc/usbd_cdc_core.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/cdc/inc/usbd_cdc_if_template.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/cdc/src/usbd_cdc_core.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/inc/usbd_dfu_core.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/inc/usbd_dfu_mal.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/inc/usbd_flash_if.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/inc/usbd_mem_if_template.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/inc/usbd_otp_if.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/src/usbd_dfu_core.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/src/usbd_dfu_mal.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/src/usbd_flash_if.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/src/usbd_mem_if_template.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/src/usbd_otp_if.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/hid/inc/usbd_hid_core.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/hid/src/usbd_hid_core.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/inc/usbd_msc_bot.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/inc/usbd_msc_core.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/inc/usbd_msc_data.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/inc/usbd_msc_mem.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/inc/usbd_msc_scsi.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/src/usbd_msc_bot.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/src/usbd_msc_core.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/src/usbd_msc_data.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/src/usbd_msc_scsi.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/src/usbd_storage_template.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/inc/usbd_conf_template.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/inc/usbd_core.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/inc/usbd_def.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/inc/usbd_ioreq.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/inc/usbd_req.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/inc/usbd_usr.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/src/usbd_core.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/src/usbd_ioreq.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/src/usbd_req.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_bsp.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_conf_template.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_core.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_dcd.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_dcd_int.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_defines.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_hcd.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_hcd_int.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_otg.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_regs.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/src/usb_core.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/src/usb_dcd.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/src/usb_dcd_int.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/src/usb_hcd.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/src/usb_hcd_int.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/src/usb_otg.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_CPAL_Driver/inc/stm32f0xx_i2c_cpal.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_CPAL_Driver/inc/stm32f0xx_i2c_cpal_conf_template.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_CPAL_Driver/inc/stm32f0xx_i2c_cpal_hal.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_CPAL_Driver/src/stm32f0xx_i2c_cpal.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_CPAL_Driver/src/stm32f0xx_i2c_cpal_hal.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_adc.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_cec.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_comp.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_crc.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_dac.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_dbgmcu.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_dma.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_exti.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_flash.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_gpio.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_i2c.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_iwdg.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_misc.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_pwr.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_rcc.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_rtc.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_spi.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_syscfg.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_tim.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_usart.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_wwdg.h
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_adc.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_cec.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_comp.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_crc.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_dac.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_dbgmcu.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_dma.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_exti.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_flash.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_gpio.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_i2c.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_iwdg.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_misc.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_pwr.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_rcc.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_rtc.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_spi.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_syscfg.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_tim.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_usart.c
    Drivers/USART/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_wwdg.c
    Drivers/USART/gemeenschappelijk/STM32F0Discovery/stm32f0_discovery.c
    Drivers/USART/gemeenschappelijk/STM32F0Discovery/stm32f0_discovery.h
    Drivers/USART/mainproject/h/comm.h
    Drivers/USART/mainproject/h/main.h
    Drivers/USART/mainproject/h/stm32f0xx_conf.h
    Drivers/USART/mainproject/h/stm32f0xx_it.h
    Drivers/USART/mainproject/h/term_io.h
    Drivers/USART/mainproject/h/usart.h
    Drivers/USART/mainproject/main.cpp
    Drivers/USART/mainproject/stm32f0xx_it.c
    Drivers/USART/mainproject/system_stm32f0xx.c
    Drivers/USART/mainproject/usart.cpp
    Fuzzy/fuzzy.cpp
    Fuzzy/fuzzy.h
    Fuzzy/main.cpp
    GUI/Debug/debug/moc_mainwindow.cpp
    GUI/Debug/debug/moc_mywindow.cpp
    GUI/Debug/debug/moc_secondwindow.cpp
    GUI/Debug/debug/moc_UART.cpp
    GUI/Debug/ui_mainwindow.h
    GUI/Debug/ui_mywindow.h
    GUI/Debug/ui_secondwindow.h
    GUI/src/main.cpp
    GUI/src/mainwindow.cpp
    GUI/src/mainwindow.h
    GUI/src/mywindow.cpp
    GUI/src/mywindow.h
    GUI/src/secondwindow.cpp
    GUI/src/secondwindow.h
    GUI/src/UART.cpp
    GUI/src/UART.h
    STM32CLion/gemeenschappelijk/basis/stm32f0/syscalls_cm0.c
    STM32CLion/gemeenschappelijk/basis/comm.h
    STM32CLion/gemeenschappelijk/basis/term_io.h
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/CM3/CoreSupport/core_cm3.c
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/CM3/CoreSupport/core_cm3.h
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/startup/gcc/startup_stm32f10x_md.c
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/stm32f10x.h
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/system_stm32f10x.c
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/system_stm32f10x.h
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F0xx/Include/stm32f0xx.h
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F0xx/Include/system_stm32f0xx.h
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F0xx/Source/Templates/system_stm32f0xx.c
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F30x/Include/stm32f30x.h
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F30x/Include/system_stm32f30x.h
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F30x/Source/Templates/system_stm32f30x.c
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F4xx/Include/system_stm32f4xx.h
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/Device/ST/STM32F4xx/Source/Templates/system_stm32f4xx.c
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/Include/arm_common_tables.h
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/Include/arm_math.h
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/Include/core_cm0.h
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/Include/core_cm0plus.h
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/Include/core_cm3.h
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/Include/core_cm4.h
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/Include/core_cm4_simd.h
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/Include/core_cmFunc.h
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/Include/core_cmInstr.h
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/Include/core_sc000.h
    STM32CLion/gemeenschappelijk/Libraries/CMSIS/Include/core_sc300.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32f10x/cpal_i2c_hal_stm32f10x.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32f10x/cpal_i2c_hal_stm32f10x.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32f2xx/cpal_i2c_hal_stm32f2xx.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32f2xx/cpal_i2c_hal_stm32f2xx.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32f4xx/cpal_i2c_hal_stm32f4xx.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32f4xx/cpal_i2c_hal_stm32f4xx.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32l1xx/cpal_i2c_hal_stm32l1xx.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/devices/stm32l1xx/cpal_i2c_hal_stm32l1xx.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/inc/cpal.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/inc/cpal_conf_template.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/inc/cpal_i2c.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/src/cpal_hal.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_CPALv1_Driver/src/cpal_i2c.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_core.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_def.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_init.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_int.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_lib.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_mem.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_regs.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_sil.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/inc/usb_type.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/src/usb_core.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/src/usb_init.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/src/usb_int.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/src/usb_mem.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/src/usb_regs.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB-FS-Device_Driver/src/usb_sil.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/audio/inc/usbd_audio_core.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/audio/inc/usbd_audio_out_if.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/audio/src/usbd_audio_core.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/audio/src/usbd_audio_out_if.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/cdc/inc/usbd_cdc_core.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/cdc/inc/usbd_cdc_if_template.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/cdc/src/usbd_cdc_core.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/inc/usbd_dfu_core.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/inc/usbd_dfu_mal.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/inc/usbd_flash_if.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/inc/usbd_mem_if_template.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/inc/usbd_otp_if.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/src/usbd_dfu_core.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/src/usbd_dfu_mal.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/src/usbd_flash_if.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/src/usbd_mem_if_template.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/dfu/src/usbd_otp_if.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/hid/inc/usbd_hid_core.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/hid/src/usbd_hid_core.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/inc/usbd_msc_bot.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/inc/usbd_msc_core.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/inc/usbd_msc_data.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/inc/usbd_msc_mem.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/inc/usbd_msc_scsi.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/src/usbd_msc_bot.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/src/usbd_msc_core.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/src/usbd_msc_data.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/src/usbd_msc_scsi.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Class/msc/src/usbd_storage_template.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/inc/usbd_conf_template.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/inc/usbd_core.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/inc/usbd_def.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/inc/usbd_ioreq.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/inc/usbd_req.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/inc/usbd_usr.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/src/usbd_core.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/src/usbd_ioreq.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_Device_Library/Core/src/usbd_req.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_bsp.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_conf_template.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_core.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_dcd.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_dcd_int.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_defines.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_hcd.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_hcd_int.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_otg.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/inc/usb_regs.h
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/src/usb_core.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/src/usb_dcd.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/src/usb_dcd_int.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/src/usb_hcd.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/src/usb_hcd_int.c
    STM32CLion/gemeenschappelijk/Libraries/STM32_USB_OTG_Driver/src/usb_otg.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_CPAL_Driver/inc/stm32f0xx_i2c_cpal.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_CPAL_Driver/inc/stm32f0xx_i2c_cpal_conf_template.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_CPAL_Driver/inc/stm32f0xx_i2c_cpal_hal.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_CPAL_Driver/src/stm32f0xx_i2c_cpal.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_CPAL_Driver/src/stm32f0xx_i2c_cpal_hal.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_adc.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_cec.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_comp.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_crc.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_dac.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_dbgmcu.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_dma.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_exti.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_flash.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_gpio.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_i2c.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_iwdg.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_misc.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_pwr.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_rcc.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_rtc.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_spi.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_syscfg.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_tim.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_usart.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/inc/stm32f0xx_wwdg.h
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_adc.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_cec.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_comp.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_crc.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_dac.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_dbgmcu.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_dma.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_exti.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_flash.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_gpio.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_i2c.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_iwdg.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_misc.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_pwr.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_rcc.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_rtc.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_spi.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_syscfg.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_tim.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_usart.c
    STM32CLion/gemeenschappelijk/Libraries/STM32F0xx_StdPeriph_Driver/src/stm32f0xx_wwdg.c
    STM32CLion/gemeenschappelijk/STM32F0Discovery/stm32f0_discovery.c
    STM32CLion/gemeenschappelijk/STM32F0Discovery/stm32f0_discovery.h
    STM32CLion/mainproject/h/comm.h
    STM32CLion/mainproject/h/main.h
    STM32CLion/mainproject/h/stm32f0xx_conf.h
    STM32CLion/mainproject/h/stm32f0xx_it.h
    STM32CLion/mainproject/h/term_io.h
    STM32CLion/mainproject/main.cpp
    STM32CLion/mainproject/stm32f0xx_it.c
    STM32CLion/mainproject/system_stm32f0xx.c Drivers/Timer/mainproject/counter.cpp Drivers/Timer/mainproject/counter.h Drivers/Timer/mainproject/pwm.cpp Drivers/Timer/mainproject/pwm.h)

add_executable(kookaburra ${SOURCE_FILES})